--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -1,13 +1,18 @@
 is_package: true
 container:
   type: HtmlTemplate
-  properties: {html: '@theme:standard-page.html'}
+  properties: {html: '@theme:standard-page.html', visible: true}
 components:
 - type: ColumnPanel
   properties: {col_widths: '{}'}
   name: content_panel
   layout_properties: {slot: default}
-  components: []
+  components:
+  - name: outlined_1
+    properties: {role: outlined, bold: true, text: Assignment Form of CCAP}
+    type: TextBox
+    layout_properties: {grid_position: 'SUQBJN,NAVUWL'}
+    event_bindings: {pressed_enter: outlined_1_pressed_enter}
 - type: FlowPanel
   properties: {}
   name: navbar_links
