--- a/client_code/Form1/form_template.yaml
+++ b/client_code/Form1/form_template.yaml
@@ -3,17 +3,12 @@ container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html', visible: true}
 components:
-- type: ColumnPanel
-  properties: {col_widths: '{}'}
-  name: content_panel
+- name: label_1
+  properties: {text: 'CCAP Registration form ', bold: true, align: center, font_size: 20,
+    font: ''}
+  type: Label
   layout_properties: {slot: default}
-  components:
-  - name: outlined_1
-    properties: {role: outlined, bold: true, text: Assignment Form of CCAP}
-    type: TextBox
-    layout_properties: {grid_position: 'SUQBJN,NAVUWL'}
-    event_bindings: {pressed_enter: outlined_1_pressed_enter}
-- type: FlowPanel
+- name: text_box_1
   properties: {}
-  name: navbar_links
-  layout_properties: {slot: nav-right}
+  type: TextBox
+  layout_properties: {slot: title}
